# codegen

./: .gitattributes  .gitignore  .lfsconfig  .pre-commit-config.yaml  CLA.md  CONTRIBUTING.md  Dockerfile  Dockerfile-runner  README.md  conftest.py  examples.md  hatch.toml  install-hooks.sh  mypy.ini  package.json  pyproject.toml  renovate.json5  ruff.toml  test_events.py
.circleci/: ats.sh  (+1 more)
Applications/PR_Review/: .env.template  README.md  app.py  cloudflare_manager.py  helpers.py  ngrok_manager.py  pyproject.toml  webhook_manager.py
codegen-examples/: CONTRIBUTING.md  README.md  STRUCTURE.md  pyproject.toml
codegen-examples/examples/ai_impact_analysis/: README.md  run.py
codegen-examples/examples/ai_impact_analysis/dashboard/: README.md
codegen-examples/examples/ai_impact_analysis/dashboard/backend/: api.py
codegen-examples/examples/ai_impact_analysis/dashboard/frontend/: package-lock.json  package.json
codegen-examples/examples/ai_impact_analysis/dashboard/frontend/app/: layout.tsx  page.tsx
codegen-examples/examples/ai_impact_analysis/dashboard/frontend/components/: contribution-timeline.tsx  contributors-breakdown.tsx  dashboard-header.tsx  high-impact-symbols.tsx  loading-screen.tsx  repo-analysis-dashboard.tsx  summary-cards.tsx  top-ai-files.tsx
codegen-examples/examples/ai_impact_analysis/dashboard/frontend/lib/: types.ts
codegen-examples/examples/attributions/: symbol_attribution.py
codegen-examples/examples/codegen-mcp-server/: README.md  llms-install.md  pyproject.toml  server.py
codegen-examples/examples/codegen_app/: README.md  app.py
codegen-examples/examples/cyclomatic_complexity/: README.md  run.py
codegen-examples/examples/deep_code_research/: README.md  requirements.txt  run.py
codegen-examples/examples/delete_dead_code/: README.md  run.py
codegen-examples/examples/dict_to_schema/: README.md  run.py
codegen-examples/examples/document_functions/: README.md  run.py
codegen-examples/examples/flask_to_fastapi_migration/: README.md  run.py
codegen-examples/examples/flask_to_fastapi_migration/input_repo/: main.py
codegen-examples/examples/flask_to_fastapi_migration/input_repo/static/: index.html  script.js  style.css
codegen-examples/examples/flask_to_fastapi_migration/input_repo/templates/: authors.html  books.html  categories.html  index.html
codegen-examples/examples/fragment_to_shorthand/: README.md  run.py
codegen-examples/examples/freezegun_to_timemachine_migration/: README.md  run.py
codegen-examples/examples/generate_training_data/: README.md  run.py
codegen-examples/examples/github_checks/: README.md  app.py
codegen-examples/examples/langchain_agent/: README.md  run.py
codegen-examples/examples/linear_webhooks/: .env.template  pyproject.toml  webhooks.py
codegen-examples/examples/modal_repo_analytics/: README.md  api.py  pyproject.toml
codegen-examples/examples/modal_repo_rag/: README.md  api.py  pyproject.toml
codegen-examples/examples/modules_dependencies/: README.md  run.py
codegen-examples/examples/openapi_decorators/: README.md  run.py
codegen-examples/examples/pr_review_bot/: .env.template  README.md  app.py  helpers.py  pyproject.toml  run.py
codegen-examples/examples/promises_to_async_await/: README.md  convert_promises_twilio_repository.ipynb  promise_to_async_await_test_cases.ts  promises_to_async_await.ipynb  run.py  utils.ts
codegen-examples/examples/python2_to_python3/: README.md  run.py
codegen-examples/examples/python2_to_python3/input_repo/: main.py
codegen-examples/examples/reexport_management/: README.md  run.py
codegen-examples/examples/reexport_management/input_repo/: tsconfig.json
codegen-examples/examples/reexport_management/input_repo/modules/module_b/: imports.ts
codegen-examples/examples/reexport_management/input_repo/modules/module_c/: imports.ts
codegen-examples/examples/remove_default_exports/: README.md  run.py
codegen-examples/examples/remove_default_exports/input_repo/: package.json  tsconfig.json
codegen-examples/examples/remove_default_exports/input_repo/src/shared/: index.ts
codegen-examples/examples/removing_import_loops_in_pytorch/: import_loops.ipynb  utils.py
codegen-examples/examples/repo_analytics/: README.md  run.py
codegen-examples/examples/slack_chatbot/: .env.template  README.md  api.py  pyproject.toml
codegen-examples/examples/snapshot_event_handler/: .env.template  README.md  codegen_app_event_handlers.py  event_handlers.py  pr_tasks.py  pyproject.toml
codegen-examples/examples/sqlalchemy_1.6_to_2.0/: README.md  run.py
codegen-examples/examples/sqlalchemy_1.6_to_2.0/input_repo/: database.py  main.py  models.py  schemas.py
codegen-examples/examples/sqlalchemy_soft_delete/: README.md  run.py
codegen-examples/examples/sqlalchemy_type_annotations/: README.md  run.py
codegen-examples/examples/sqlalchemy_type_annotations/input_repo/: README.md
codegen-examples/examples/sqlalchemy_type_annotations/input_repo/config/: settings.py
codegen-examples/examples/sqlalchemy_type_annotations/input_repo/database/: connection.py
codegen-examples/examples/sqlalchemy_type_annotations/input_repo/models/: base.py  organization.py  transaction.py  user.py
codegen-examples/examples/swebench_agent_run/: .env.template  README.md  constants.py  entry_point.py  local_run.ipynb  pyproject.toml  run_eval.py  test.py
codegen-examples/examples/symbol-attributions/: README.md
codegen-examples/examples/ticket-to-pr/: .env.template  README.md  app.py  data.py  helpers.py  pyproject.toml
codegen-examples/examples/unittest_to_pytest/: README.md  run.py
codegen-examples/examples/unittest_to_pytest/input_repo/: run_tests.py
codegen-examples/examples/unittest_to_pytest/input_repo/jj_classes/: __init__.py  castle.py  character.py
codegen-examples/examples/unittest_to_pytest/input_repo/tests/: test_classes.py
codegen-examples/examples/usesuspensequery_to_usesuspensequeries/: README.md  run.py
codegen-examples/examples/visualize_codebases/: README.md  blast_radius.py  call_trace.py  dependency_trace.py  method_relationships.py
(+1704 files in other folders)
