[project]
name = "codegen-examples"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = ["codegen==0.5.3"]
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Development Status :: 4 - Beta",
  "Environment :: MacOS X",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python",
]

[tool.ruff]
line-length = 200
exclude = ["**/input_repo/**", "**/output_repo/**", "**/repositories/**"]

[tool.uv]
cache-keys = [{ git = { commit = true, tags = true } }]
dev-dependencies = [
  "pre-commit>=4.0.1",
  "pre-commit-uv>=4.1.4",
  "uv>=0.4.25",
  "jupyterlab==4.3.5",
  "deptry>=0.22.0",
]

[tool.pre-commit-uv]
requirements = ["strict-requirements"]

[tool.deptry]
package_module_name_map.codegen = "codegen"
