[project]
name = "pr-review-bot"
version = "0.1.0"
description = "A bot that reviews PRs against documentation in root directory"
authors = [
    {name = "Codegen Team", email = "info@codegen.sh"},
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.23.2",
    "pygithub>=2.1.1",
    "python-dotenv>=1.0.0",
    "markdown>=3.5.1",
    "beautifulsoup4>=4.12.2",
    "codegen>=0.18.0",
    "pydantic>=2.4.2",
    "pyngrok>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.10.0",
    "isort>=5.12.0",
    "mypy>=1.6.1",
    "pytest>=7.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true